--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 body {
+	width: auto;
 	margin: 0;
 	padding: 0;
 	font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif;
@@ -24,8 +25,8 @@ footer {
    	left: 0;
    	bottom: 0;
 	border-top: 5px solid #4aaaa5;
-	padding: 30px;
-	height: 50px
+	padding: 20px;
+	height: 20px;
 	width: 100%;
 	background-color: #666666;
 	text-align: center;
@@ -71,7 +72,6 @@ footer {
 .clearfix {
 	clear: both;
 	overflow: auto;
-	width: 100%
 }
 
 #portfolio {
@@ -83,11 +83,10 @@ footer {
 
 #navgroup {
 	float: left;
-	margin: 30px 0 0 480px;
+	margin: 30px 0 0 150px;
 }
 
 #title {
-	width: 100%;
 	background-color: #ffffff;
 	border-bottom: 3px solid #cccccc;
 }
@@ -101,7 +100,7 @@ footer {
 
 #info {
 	padding: 20px;
-	width: 650px;
+	width: 340px;
 	float: left;
 	background-color: #ffffff;
 	border-color: #dddddd;
@@ -119,13 +118,12 @@ footer {
 	height: 150px;
 }
 
-@media screen and (max-width: 980px) {
-
-}
-
 @media screen and (max-width: 768px) {
+	#title {
+		background-color: red;
+	}
 	#main {
-		margin:20px;
+		margin:20px 20px 70px;
 		padding: 20px;
 	}
 	#info {
@@ -136,16 +134,53 @@ footer {
 		margin: 0;
 		width: 100%;
 	}
+	#mypic {
+		margin-right: 20px;
+		float: left;
+	}
+	#navgroup {
+		float: left;
+		margin: 30px 0 0 50px;
+	}
 }
 
 @media screen and (max-width: 640px) {
+	header {
+		width: 100%;
+		margin-left: 0px;
+	}
+	#navgroup {
+		float: none;
+		margin: auto;
+		width: 80%;
+	}
+	.nav {
+		padding: 0px 40px;
+		font-size: large;
+	}
+	.nav:hover {
+		padding: 0px 40px;
+		font-size: large;
+	}
+	#portfolio {
+		border-right: 2px solid #f7f4f4;
+		border-left: 2px solid #f7f4f4;
+		padding: 0 40px;
+	}
+	#title {
+		background-color: purple;
+	}
 	#main {
-		margin: 20px;
+		margin: 20px 20px 70px;
 	}
 	#info {
 		width: 100%;
 	}
 	#connect {
+		margin-top: 30px;
 		width: 100%;
+	}
+	form {
+		width: 300px;
 	}
 }
